links dos navs incluidos

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <header>
       <nav>
-        <li>Sobre mim</li>
-        <li>Minhas habilidades</li>
-        <li>Minha experiência</li>
-        <li>Contato</li>
+        <li><a href="#sobreMim">Sobre mim</a></li>
+        <li><a href="#habilidades">Minhas habilidades</a></li>
+        <li><a href="#experiencia">Minha experiência</a></li>
+        <li><a href="#contato">Contato</a></li>
       </nav>
     </header>
     <section>
