melhorias no estilo e inclusao do portfolio

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="#sobreMim">Sobre mim</a></li>
         <li><a href="#habilidades">Minhas habilidades</a></li>
         <li><a href="#experiencia">Minha experiência</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contato">Contato</a></li>
       </nav>
     </header>
@@ -70,6 +71,10 @@
           para enfrentar novos desafios de programação."
         </p>
       </div>
+      <div id="portfolio" class="portfolio">
+        <h2>Portfolio</h2>
+        <div class="project-gallery"></div>
+      </div>
       <div id="contato" class="contato">
         <div class="contact-form">
           <h2>Contato</h2>
@@ -89,5 +94,6 @@
       </div>
     </section>
     <footer></footer>
+    <script src="./main.js"></script>
   </body>
 </html>
